# OpenGL-CMake

./: CMakeLists.txt
src/: main.cpp
src/gfx/: window.cpp  window.hpp
